--- a/.github/workflows/deploy-static.yml
+++ b/.github/workflows/deploy-static.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: 'dest/'
+          path: 'dest'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
