--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
     "format": "prettier . --write --ignore-path .gitignore \"!.yarn\"",
     "lint": "eslint . --fix --ignore-path .gitignore \"!.yarn\"",
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs",
+    "serve": "yarn build && serve dist/"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@vuepress/plugin-register-components": "next",
     "autoprefixer": "^10.4.13",
     "eslint": "latest",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-vue": "latest",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "serve": "^14.1.2",
     "tailwindcss": "^3.2.4",
     "vuepress": "next"
   }
