--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --fix --ignore-path .gitignore \"!.yarn\"",
     "dev": "vuepress dev docs",
     "build": "vuepress build docs",
-    "serve": "yarn build && serve dist/"
+    "serve": "yarn build && serve target/dist/"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
