--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,15 @@
 nodeLinker: node-modules
 
+packageExtensions:
+  "@vueuse/core@9.7.0":
+    peerDependencies:
+      vue: "^3.0.0-0 || ^2.6.0"
+  "@vueuse/shared@9.7.0":
+    peerDependencies:
+      vue: "^3.0.0-0 || ^2.6.0"
+  "vuepress@2.0.0-beta.59":
+    dependencies:
+      "@vuepress/client": 2.0.0-beta.59
+      vue: "^3.2.45"
+
 yarnPath: .yarn/releases/yarn-3.3.0.cjs
